Make the recyclerview trick work
I'm not going to fix it further than this. This screen is already on life support

--- a/app/src/main/res/layout/fragment_dashboard.xml
+++ b/app/src/main/res/layout/fragment_dashboard.xml
@@ -5,6 +5,7 @@
     android:id="@+id/dashboardNestedScrollView"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:fillViewport="true"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
     tools:context=".feature.dashboard.ui.DashboardFragment">
 
