--- a/app/src/main/res/layout/fragment_dashboard.xml
+++ b/app/src/main/res/layout/fragment_dashboard.xml
@@ -21,6 +21,56 @@
             layout="@layout/loading_spinner"
             tools:visibility="gone" />
 
+        <com.hedvig.app.ui.view.HedvigCardView
+            android:id="@+id/infoBox"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="@dimen/base_margin_double"
+            android:layout_marginTop="@dimen/base_margin_double"
+            android:layout_marginEnd="@dimen/base_margin_double"
+            android:background="@drawable/background_rounded_corners"
+            android:backgroundTint="@color/violet_100"
+            android:padding="@dimen/base_margin_double"
+            android:visibility="gone"
+            tools:visibility="visible">
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="vertical">
+
+                <TextView
+                    android:id="@+id/infoBoxTitle"
+                    style="@style/Headline.Small"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center_horizontal"
+                    tools:text="@string/DASHBOARD_SETUP_DIRECT_DEBIT_TITLE" />
+
+                <TextView
+                    android:id="@+id/infoBoxBody"
+                    style="@style/Body.Small"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center_horizontal"
+                    android:layout_marginTop="@dimen/base_margin"
+                    android:textAlignment="center"
+                    tools:text="@string/DASHBOARD_DIRECT_DEBIT_STATUS_NEED_SETUP_DESCRIPTION" />
+
+                <Button
+                    android:id="@+id/infoBoxButton"
+                    style="@style/HedvigButton.Outlined"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center_horizontal"
+                    android:layout_marginTop="@dimen/base_margin_double"
+                    android:textColor="@color/link_purple"
+                    tools:text="@string/DASHBOARD_DIRECT_DEBIT_STATUS_NEED_SETUP_BUTTON_LABEL" />
+
+            </LinearLayout>
+
+        </com.hedvig.app.ui.view.HedvigCardView>
+
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/contracts"
             android:layout_width="match_parent"
