--- a/app/src/main/res/layout/activity_logged_in_terminated.xml
+++ b/app/src/main/res/layout/activity_logged_in_terminated.xml
@@ -4,7 +4,6 @@
     android:layout_height="match_parent"
     android:orientation="vertical">
 
-
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -20,7 +19,8 @@
         android:layout_marginTop="@dimen/base_margin_double"
         android:layout_marginEnd="@dimen/base_margin_double"
         android:gravity="center"
-        android:text="@string/INSURANCE_STATUS_TERMINATED_ALERT_MESSAGE" />
+        android:text="@string/INSURANCE_STATUS_TERMINATED_ALERT_MESSAGE"
+        android:textAppearance="?textAppearanceBody1" />
 
     <Button
         android:id="@+id/terminatedOpenChatButton"
