--- a/app/src/main/res/layout/activity_trustly.xml
+++ b/app/src/main/res/layout/activity_trustly.xml
@@ -58,6 +58,7 @@
             android:paddingStart="@dimen/base_margin_double"
             android:paddingEnd="@dimen/base_margin_double"
             android:text="@string/ONBOARDING_CONNECT_DD_BODY"
+            android:textAppearance="?textAppearanceBody1"
             app:layout_constraintBottom_toTopOf="@id/explainerButton"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
