--- a/app/src/main/res/layout/chat_input_view.xml
+++ b/app/src/main/res/layout/chat_input_view.xml
@@ -38,6 +38,7 @@
             android:backgroundTint="@color/link_purple"
             android:gravity="center"
             android:text="@string/GIF_BUTTON_TITLE"
+            android:textAppearance="?textAppearanceBody1"
             android:textColor="@color/white" />
 
         <!--
