--- a/app/src/main/res/layout/chat_message_hedvig.xml
+++ b/app/src/main/res/layout/chat_message_hedvig.xml
@@ -22,6 +22,7 @@
             android:paddingTop="@dimen/base_margin"
             android:paddingEnd="@dimen/base_margin_double"
             android:paddingBottom="@dimen/base_margin"
+            android:textAppearance="?textAppearanceBody1"
             android:textColorLink="@color/link_purple"
             tools:text="Hej! Jag heter Hedvig 👋\nhttps://www.hedvig.com" />
 
