--- a/app/src/main/res/layout/offer_section_switch.xml
+++ b/app/src/main/res/layout/offer_section_switch.xml
@@ -55,6 +55,7 @@
         android:layout_marginTop="@dimen/base_margin_triple"
         android:layout_marginEnd="@dimen/base_margin_double"
         android:text="@string/SIGN_MOBILE_BANK_ID"
+        android:textAppearance="?textAppearanceBody1"
         app:layout_constraintStart_toEndOf="@id/bulletOne"
         app:layout_constraintTop_toBottomOf="@id/switchTitle" />
 
@@ -80,6 +81,7 @@
         android:layout_marginStart="@dimen/base_margin_double"
         android:layout_marginTop="@dimen/base_margin_triple"
         android:layout_marginEnd="@dimen/base_margin_double"
+        android:textAppearance="?textAppearanceBody1"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@id/bulletTwo"
         app:layout_constraintTop_toBottomOf="@id/switchParagraphOne"
@@ -109,6 +111,7 @@
         android:layout_marginTop="@dimen/base_margin_triple"
         android:layout_marginEnd="@dimen/base_margin_double"
         android:text="@string/OFFER_SWITCH_COL_THREE_PARAGRAPH_APP"
+        android:textAppearance="?textAppearanceBody1"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@id/bulletThree"
         app:layout_constraintTop_toBottomOf="@id/switchParagraphTwo" />
