--- a/app/src/main/res/layout/chat_message_file_upload.xml
+++ b/app/src/main/res/layout/chat_message_file_upload.xml
@@ -28,6 +28,7 @@
             android:drawableStart="@drawable/ic_file"
             android:drawablePadding="@dimen/base_margin_half"
             android:padding="12dp"
+            android:textAppearance="?textAppearanceBody1"
             android:textColor="@color/white"
             app:drawableTint="@color/white"
             tools:text="pdf-fil uppladdad" />
