--- a/app/src/main/res/layout/date_pick_layout.xml
+++ b/app/src/main/res/layout/date_pick_layout.xml
@@ -20,6 +20,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="@dimen/base_margin_double"
+            android:textAppearance="?textAppearanceBody1"
             android:visibility="gone"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -44,6 +45,7 @@
         android:layout_gravity="center_vertical"
         android:layout_marginStart="@dimen/base_margin_double"
         android:text="@string/DATE_BTN_PLACEHOLDER"
+        android:textAppearance="?textAppearanceBody1"
         app:layout_constraintBottom_toBottomOf="@id/datePickLayout"
         app:layout_constraintStart_toStartOf="@id/datePickLayout"
         app:layout_constraintTop_toTopOf="@+id/datePickLayout" />
