--- a/app/src/main/res/layout/offer_section_terms.xml
+++ b/app/src/main/res/layout/offer_section_terms.xml
@@ -119,6 +119,7 @@
         android:drawablePadding="@dimen/base_margin_half"
         android:gravity="center_horizontal"
         android:text="@string/OFFER_PRESALE_INFORMATION"
+        android:textAppearance="?textAppearanceBody1"
         app:autoSizeMaxTextSize="@dimen/text_medium"
         app:autoSizeMinTextSize="@dimen/text_small"
         app:autoSizeTextType="uniform"
@@ -135,6 +136,7 @@
         android:drawablePadding="@dimen/base_margin_half"
         android:gravity="center_horizontal"
         android:text="@string/OFFER_TERMS"
+        android:textAppearance="?textAppearanceBody1"
         app:autoSizeMaxTextSize="@dimen/text_medium"
         app:autoSizeMinTextSize="@dimen/text_small"
         app:autoSizeTextType="uniform"
@@ -154,6 +156,7 @@
         android:gravity="center_horizontal"
         android:maxLines="2"
         android:text="@string/OFFER_PRIVACY_POLICY"
+        android:textAppearance="?textAppearanceBody1"
         app:autoSizeMaxTextSize="@dimen/text_medium"
         app:autoSizeMinTextSize="@dimen/text_xxsmall"
         app:autoSizeTextType="uniform"
