--- a/app/src/main/res/layout/peril_bottom_sheet.xml
+++ b/app/src/main/res/layout/peril_bottom_sheet.xml
@@ -45,6 +45,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="@dimen/base_margin_half"
         android:text="@string/DASHBOARD_PERIL_SHEET_INSURED_AGAINST"
+        android:textAppearance="?textAppearanceBody1"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/perilSubject" />
 
@@ -63,6 +64,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="@dimen/base_margin_half"
+        android:textAppearance="?textAppearanceBody1"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/perilTitle"
         tools:text="Du bor i en hyresrätt, det betyder att det är din hyresvärds försäkring som täcker skador på lägenheten som orsakas av en eldsvåda. Men oroa dig inte, om dina prylar skadas av elden ersätter Hedvig så klart det." />
