--- a/app/src/main/res/layout/referrals_receiver_activity.xml
+++ b/app/src/main/res/layout/referrals_receiver_activity.xml
@@ -42,6 +42,7 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="@dimen/base_margin"
             android:gravity="center"
+            android:textAppearance="?textAppearanceBody1"
             tools:text="@string/REFERRAL_STARTSCREEN_BODY" />
 
         <Button
