--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -43,5 +43,5 @@
     <color name="hedvig_dark_gray">#505050</color>
     <color name="hedvig_gray_on_dark">#888888</color>
     <color name="hedvig_gray_on_light">#717171</color>
-    <color name="hedvig_off_black">#1c1c1c</color>
+    <color name="hedvig_off_black">#262626</color>
 </resources>
