--- a/app/src/debug/res/layout/activity_view_gallery.xml
+++ b/app/src/debug/res/layout/activity_view_gallery.xml
@@ -87,4 +87,23 @@
         android:layout_height="wrap_content"
         android:text="Contained Button (Large)" />
 
+    <com.hedvig.app.ui.view.HedvigCardView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical"
+            android:padding="@dimen/base_margin_double">
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Card"
+                android:textAppearance="?textAppearanceHeadline5" />
+
+        </LinearLayout>
+    </com.hedvig.app.ui.view.HedvigCardView>
+
 </LinearLayout>
