--- a/app/src/main/res/drawable/hedvig_card_view.xml
+++ b/app/src/main/res/drawable/hedvig_card_view.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
-    <solid android:color="@color/background_elevation_1"/>
+    <solid android:color="?colorSurface"/>
     <corners android:radius="@dimen/hedvig_card_view_radius"/>
 </shape>
