--- a/app/src/main/res/layout/activity_charity.xml
+++ b/app/src/main/res/layout/activity_charity.xml
@@ -47,7 +47,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginStart="@dimen/base_margin"
-                    android:layout_marginTop="48dp"
+                    android:layout_marginTop="@dimen/base_margin_sextuple"
                     android:layout_marginEnd="@dimen/base_margin"
                     android:layout_marginBottom="@dimen/base_margin">
 
