--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -97,17 +97,13 @@
 
         <Button
             android:id="@id/logout"
-            style="?android:attr/borderlessButtonStyle"
+            style="?materialButtonTextStyle"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="@dimen/base_margin_double"
             android:layout_marginBottom="@dimen/base_margin_double"
-            android:padding="8dp"
             android:text="@string/PROFILE_LOGOUT_BUTTON"
-            android:textAlignment="center"
-            android:textAllCaps="false"
-            android:textColor="@color/pink"
-            android:textSize="16sp"
+            android:textColor="?colorError"
             android:visibility="gone"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
