--- a/app/src/main/res/layout/activity_key_gear_valuation_info.xml
+++ b/app/src/main/res/layout/activity_key_gear_valuation_info.xml
@@ -48,7 +48,8 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/KEY_GEAR_ITEM_VIEW_VALUATION_PERCENTAGE_LABEL" />
+        android:text="@string/KEY_GEAR_ITEM_VIEW_VALUATION_PERCENTAGE_LABEL"
+        android:textAppearance="?textAppearanceBody1" />
 
     <TextView
         android:id="@+id/body"
@@ -58,6 +59,7 @@
         android:layout_marginTop="@dimen/base_margin_quadruple"
         android:layout_marginEnd="@dimen/base_margin_triple"
         android:text="@string/KEY_GEAR_ITEM_VIEW_VALUATION_BODY"
-        android:textAlignment="center" />
+        android:textAlignment="center"
+        android:textAppearance="?textAppearanceBody1" />
 
 </LinearLayout>
