--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -131,11 +131,8 @@
         <item name="android:textAllCaps">false</item>
     </style>
 
-    <style name="AlertDialog" parent="Theme.AppCompat.Light.Dialog.Alert">
-        <item name="colorAccent">@color/link_purple</item>
+    <style name="AlertDialog" parent="Theme.MaterialComponents.DayNight.Dialog.Alert">
         <item name="android:background">@drawable/background_rounded_corners</item>
-        <item name="android:textColor">@color/text_regular</item>
-        <item name="android:textColorPrimary">@color/text_regular</item>
     </style>
 
     <style name="DialogNoAnimation">
