--- a/app/src/main/res/layout/file_upload_dialog.xml
+++ b/app/src/main/res/layout/file_upload_dialog.xml
@@ -51,9 +51,8 @@
         app:layout_constraintStart_toEndOf="@id/uploadImageOrVideo"
         app:layout_constraintTop_toBottomOf="@id/header" />
 
-    <com.airbnb.lottie.LottieAnimationView
+    <ProgressBar
         android:id="@id/loadingSpinner"
-        style="@style/LoadingSpinner"
         android:layout_width="@dimen/loading_spinner_width"
         android:layout_height="@dimen/base_margin_triple"
         android:layout_marginTop="@dimen/base_margin_double"
@@ -62,9 +61,6 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/header"
-        app:lottie_autoPlay="false"
-        app:lottie_loop="true"
-        app:lottie_rawRes="@raw/hedvig_uploading_animation"
         tools:visibility="visible" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
