--- a/app/src/debug/res/layout/activity_view_gallery.xml
+++ b/app/src/debug/res/layout/activity_view_gallery.xml
@@ -78,6 +78,17 @@
                 android:text="Caption"
                 android:textAppearance="?textAppearanceCaption" />
 
+            <com.google.android.material.textfield.TextInputLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
+
+                <com.google.android.material.textfield.TextInputEditText
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:hint="Text Field" />
+
+            </com.google.android.material.textfield.TextInputLayout>
+
             <Button
                 style="?materialButtonTextStyle"
                 android:layout_width="wrap_content"
