--- a/app/src/main/res/drawable/bottom_sheet_handle.xml
+++ b/app/src/main/res/drawable/bottom_sheet_handle.xml
@@ -1,6 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
-<shape xmlns:android="http://schemas.android.com/apk/res/android" android:shape="rectangle">
-    <solid android:color="?colorPrimaryVariant"/>
-    <corners android:radius="@dimen/bottom_sheet_handle_corner_radius"/>
-    <size android:width="@dimen/bottom_sheet_handle_width" android:height="@dimen/bottom_sheet_handle_height"/>
+<shape xmlns:android="http://schemas.android.com/apk/res/android"
+    android:shape="rectangle">
+    <!-- Theme attribute refused to work properly here -->
+    <solid android:color="@color/colorPrimaryVariant" />
+    <corners android:radius="@dimen/bottom_sheet_handle_corner_radius" />
+    <size
+        android:width="@dimen/bottom_sheet_handle_width"
+        android:height="@dimen/bottom_sheet_handle_height" />
 </shape>
