--- a/app/src/main/res/layout/loading_spinner.xml
+++ b/app/src/main/res/layout/loading_spinner.xml
@@ -1,9 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
-<com.airbnb.lottie.LottieAnimationView xmlns:android="http://schemas.android.com/apk/res/android"
+<ProgressBar xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@id/loadingSpinner"
-    style="@style/LoadingSpinner"
     android:layout_width="@dimen/loading_spinner_width"
     android:layout_height="@dimen/loading_spinner_height"
     android:layout_gravity="center"
@@ -11,8 +10,5 @@
     app:layout_constraintEnd_toEndOf="parent"
     app:layout_constraintStart_toStartOf="parent"
     app:layout_constraintTop_toTopOf="parent"
-    app:lottie_autoPlay="true"
-    app:lottie_loop="true"
-    app:lottie_rawRes="@raw/hedvig_uploading_animation"
     tools:visibility="gone" />
 
