--- a/app/src/main/res/layout/key_gear_item_detail_name_section.xml
+++ b/app/src/main/res/layout/key_gear_item_detail_name_section.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
@@ -28,17 +27,23 @@
             android:layout_gravity="center_vertical"
             tools:text="Mobiltelefon" />
 
-        <com.hedvig.app.ui.view.HedvigEditText
-            android:id="@+id/nameEditText"
+        <com.google.android.material.textfield.TextInputLayout
+            android:id="@+id/nameEditTextContainer"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
             android:alpha="0"
-            android:imeOptions="actionDone"
-            android:inputType="text"
-            android:visibility="gone"
-            app:hintText="@string/KEY_GEAR_ITEM_VIEW_ITEM_NAME_TABLE_TITLE"
-            tools:visibility="visible" />
+            android:visibility="gone">
+
+            <com.google.android.material.textfield.TextInputEditText
+                android:id="@+id/nameEditText"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:hint="@string/KEY_GEAR_ITEM_VIEW_ITEM_NAME_TABLE_TITLE"
+                android:imeOptions="actionDone"
+                android:inputType="text" />
+
+        </com.google.android.material.textfield.TextInputLayout>
 
         <Button
             android:id="@+id/addName"
