--- a/app/src/main/res/values/arrays.xml
+++ b/app/src/main/res/values/arrays.xml
@@ -25,7 +25,7 @@
         <item>Norge</item>
     </string-array>
     <string-array name="market_settings_values">
-        <item>SV</item>
+        <item>SE</item>
         <item>NO</item>
     </string-array>
 </resources>
