--- a/app/src/main/res/layout/language_item_new.xml
+++ b/app/src/main/res/layout/language_item_new.xml
@@ -3,7 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:background="@color/background_elevation_1"
+    android:background="?colorSurface"
     android:clickable="true"
     android:focusable="true"
     android:gravity="center_vertical"
@@ -14,10 +14,10 @@
 
     <TextView
         android:id="@+id/language"
-        style="@style/Body.Regular"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_weight="1"
+        android:textAppearance="?textAppearanceBody1"
         tools:text="Sverige" />
 
     <RadioButton
