--- a/app/src/main/res/drawable/ic_flag_no.xml
+++ b/app/src/main/res/drawable/ic_flag_no.xml
@@ -2,6 +2,14 @@
     <path android:pathData="M2.25 0.25h23.5a2 2 0 0 1 2 2v15.5a2 2 0 0 1-2 2H2.25a2 2 0 0 1-2-2V2.25a2 2 0 0 1 2-2z" android:strokeWidth="0.5" android:strokeColor="#F5F5F5" android:fillType="evenOdd"/>
     <group>
         <clip-path android:pathData="M2 0h24a2 2 0 0 1 2 2v16a2 2 0 0 1-2 2H2a2 2 0 0 1-2-2V2a2 2 0 0 1 2-2z"/>
+        <path android:pathData="M8 0h4v20H8z" android:strokeWidth="1" android:fillColor="#FFFFFF" android:fillType="evenOdd"/>
+    </group>
+    <group>
+        <clip-path android:pathData="M2 0h24a2 2 0 0 1 2 2v16a2 2 0 0 1-2 2H2a2 2 0 0 1-2-2V2a2 2 0 0 1 2-2z"/>
+        <path android:pathData="M0 8h28v4H0z" android:strokeWidth="1" android:fillColor="#FFFFFF" android:fillType="evenOdd"/>
+    </group>
+    <group>
+        <clip-path android:pathData="M2 0h24a2 2 0 0 1 2 2v16a2 2 0 0 1-2 2H2a2 2 0 0 1-2-2V2a2 2 0 0 1 2-2z"/>
         <path android:pathData="M0 12h8v8H0v-8zm28 0v8H12v-8h16zm0-12v8H12V0h16zM8 8H0V0h8v8z" android:strokeWidth="1" android:fillColor="#F14247" android:fillType="evenOdd"/>
     </group>
     <group>
